syntax = "proto3";

package blog;

option go_package = "github.com/This-Is-Prince/learning-grpc/mongodb-crud-with-grpc/pb";

service BlogService {
  rpc CreateBlog(CreateBlogReq) returns (CreateBlogRes);
  rpc ReadBlog(ReadBlogReq) returns (ReadBlogRes);
  rpc UpdateBlog(UpdateBlogReq) returns (UpdateBlogRes);
  rpc DeleteBlog(DeleteBlogReq) returns (DeleteBlogRes);
  rpc ListBlogs(ListBlogReq) returns (stream ListBlogRes);
}

message Blog {
  string id = 1;
  string author_id = 2;
  string title = 3;
  string content = 4;
}

// Create
message CreateBlogReq { Blog blog = 1; }
message CreateBlogRes { Blog blog = 1; }

// Update
message UpdateBlogReq { Blog blog = 1; }
message UpdateBlogRes { Blog blog = 1; }

// Read
message ReadBlogReq { string id = 1; }
message ReadBlogRes { Blog blog = 1; }

// Delete
message DeleteBlogReq { string id = 1; }
message DeleteBlogRes { bool success = 1; }

// ListBlogs
message ListBlogReq {}
message ListBlogRes { Blog blog = 1; }